...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/btnToggleService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/callback_service_stopped" />

        <TextView
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/current_trigger_phrase" />

        <EditText
            android:id="@+id/editTriggerPhrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/no_phrase_set"
            android:maxLines="1" />

...
