<resources>
    <string name="app_name">Callback</string>
    <string name="version">1.1.0</string>
    <string name="about">About</string>
    <string name="start_on_speaker">Start call on speaker phone</string>
    <string name="update_trigger_phrase">Update trigger phrase</string>
    <string name="trigger_updated">Trigger phrase updated!</string>
    <string name="trigger_not_updated">Trigger phrase failed to update!</string>
    <string name="no_phrase_set">No phrase set</string>
    <string name="current_trigger_phrase">Current trigger phrase</string>
    <string name="callback_service_started">Callback service is on</string>
    <string name="callback_service_stopped">Callback service is off</string>
    <string name="callback_enabled">"Callback service enabled"</string>
    <string name="callback_disabled">"Callback service disabled"</string>
    <string name="disable_callback">"Disable callback service"</string>
    <string name="enable_callback">"Enable callback service"</string>
    <string name="error_trigger_min_length">"Trigger phrase must be at least 4 chars"</string>
    <string name="send_feedback">Send feedback</string>
    <string name="skip">Skip</string>
    <string name="Done">Finish</string>
    <string name="intro">intro</string>
    <string name="intro_shown">intro_shown</string>
    <string name="image_of_a_key">image of a key</string>
    <string name="shameless_self_promotion">Created by @K4KYA in London, UK</string>
    <string name="page_indicator">page indicator</string>
    <string name="next_button">Next</string>
    <string name="rate">Rate in Play Store</string>
    <string name="open_source">Open source licenses</string>
    <string name="outgoing_call_app_label">Make outgoing calls using:</string>
</resources>
